html file has completed

--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css"></link>
+</head>
+<body>
+    <div>
+        <div class="box1">
+            <img src="https://i.postimg.cc/pVc2z0Fh/res-img.png" alt="Image"></img>
+        </div>
+        <div class="box2">
+            <h1>Restaurant</h1>
+        </div>
+        <div class="box3">
+            <button>Home</button>
+            <button>About</button>
+            <button>Contact</button>
+            <button>Services</button>
+        </div>
+        <div class="box4">
+            <h2>Welcome to Our Restaurant</h2>
+            <p>Experience the finest dining with us. We offer a variety of dishes made from the freshest ingredients.</p>
+        </div>
+        <div class="box5">
+            <button>view Menu</button>
+            <button>Book a Table</button>
+        </div>
+        <div class="box6">
+            <h2>Our Menu</h2>
+        </div>
+        <div class="box7">
+            <div class="item">
+                <img id="img1" src="https://i.postimg.cc/029B5xQ2/Screenshot-2025-11-09-at-3-40-00-PM.png" alt="Image">
+                <img id="img2" src="https://i.postimg.cc/J0pc4f6q/Screenshot-2025-11-09-at-3-40-30-PM.png" alt="Image">
+                <img id="img3" src="https://i.postimg.cc/9Q6PMtb5/Screenshot-2025-11-09-at-3-41-00-PM.png" alt="Image">
+            </div>
+        </div>
+    </div>
+    
+</body>
+</html>
